--- a/www/apps/home/templates/login.html
+++ b/www/apps/home/templates/login.html
@@ -1,13 +1,13 @@
-<ion-view view-title="Login" name="login-view">
+<ion-view view-title="登录" name="login">
     <ion-content class="padding">
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="data.username">
+                <input type="text" placeholder="用户名" ng-model="data.username">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password" ng-model="data.password">
+                <input type="password" placeholder="密码" ng-model="data.password">
             </label>
         </div>
-        <button class="button button-block button-calm" ng-click="login()">Login</button>
+        <button class="button button-block button-calm" ng-click="login()">登录</button>
     </ion-content>
 </ion-view>
