--- a/www/apps/home/templates/index.html
+++ b/www/apps/home/templates/index.html
@@ -1,10 +1,10 @@
 <ion-view view-title="主页">
     <ion-content>
-        <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="story in data.stories" type="item-text-wrap" href="#/home/{{story.id}}">
+
+        <ion-list type="card" can-swipe="false">
+            <ion-item class="item-remove-animate item-thumbnail-right item-divider" ng-repeat="story in data.stories" type="item-text-wrap" href="#/home/{{story.id}}">
                 <img ng-src="{{story.images[0]}}">
                 <h2>{{story.title}}</h2>
-                <i class="icon ion-chevron-right icon-accessory"></i>
             </ion-item>
         </ion-list>
     </ion-content>
