--- a/www/apps/home/templates/login.html
+++ b/www/apps/home/templates/login.html
@@ -1,13 +1,22 @@
-<ion-view view-title="登录" name="login">
-    <ion-content class="padding">
-        <div class="list list-inset">
+<div class="modal" ng-controller="LoginCtrl">
+    <ion-header-bar class="bar-stable">
+        <h1 class="title">登陆</h1>
+    </ion-header-bar>
+    <ion-content has-header="true" padding="true">
+        <form class="list">
+            <div class="item item-divider">
+                请输入登陆信息
+            </div>
+            <div>{{message}}</div>
             <label class="item item-input">
-                <input type="text" placeholder="用户名" ng-model="data.username">
+                <input type="text" placeholder="用户名" ng-model="user.username" required>
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="密码" ng-model="data.password">
+                <input type="password" placeholder="密码" ng-model="user.password" required>
             </label>
-        </div>
-        <button class="button button-block button-calm" ng-click="login()">登录</button>
+            <div class="padding">
+                <button class="button button-block button-stable" ng-click="login()">登陆</button>
+            </div>
+        </form>
     </ion-content>
-</ion-view>
+</div>
