--- a/www/apps/declare/templates/object_list.html
+++ b/www/apps/declare/templates/object_list.html
@@ -1,11 +1,14 @@
 <ion-view title="{{type_name}}">
     <ion-content>
         <ion-list>
-            <ion-item class="item-icon-list" ng-repeat="object in objects"
+            <ion-item class="item-icon-list " ng-repeat="object in objects"
                       ui-sref="tab.{{action}}-object-detail({type: type, id: object.id})">
                 <h2>{{object.project_name}}</h2>
 
                 <p>{{object.addr}}</p>
+                <ion-option-button class="button-assertive" ng-click="deleteObj(object, $index)">
+                    删除
+                </ion-option-button>
             </ion-item>
         </ion-list>
         <ion-infinite-scroll ng-if="can_be_load" on-infinite="getObjects()"></ion-infinite-scroll>
